[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/player/sprites/player-vertical-1.png" type="Texture" id=1]
[ext_resource path="res://assets/player/sprites/player-horizontal-1.png" type="Texture" id=2]
[ext_resource path="res://assets/player/sprites/player-horizontal-2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/sprites/player-vertical-2.png" type="Texture" id=4]
[ext_resource path="res://assets/player/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/player/Shoot.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/enemy/Explosion.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Vertical",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Horizontal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 7.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 7.5 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 5 )
Explosion = ExtResource( 7 )
Shoot = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Vertical"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.5 )
shape = SubResource( 2 )

[node name="ShootSpawn" type="Position2D" parent="."]
position = Vector2( 0, -12 )

[node name="ExplosionSpawn" type="Position2D" parent="."]
position = Vector2( 0, -12 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4.5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
